--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,38 +10,69 @@
         android:id="@+id/mainText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="@string/main_text" />
 
-    <Button
+    <ImageButton
         android:id="@+id/settingsB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_compass"
         android:text="@string/settings_button"
-        tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="120dp" />
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center"
+         />
+    <TextView
+        android:text="@string/settings_button"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        />
 
-    <Button
+    <ImageButton
         android:id="@+id/profileB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_view"
         android:text="@string/profile_button"
-        tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="212dp" />
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center"
+        />
+    <TextView
+        android:text="@string/profile_button"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        />
 
-    <Button
+    <ImageButton
         android:id="@+id/fitnessB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_myplaces"
         android:text="@string/fitness_button"
-        tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="316dp" />
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"/>
+    <TextView
+        android:text="@string/fitness_button"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        />
 
-    <Button
+    <ImageButton
         android:id="@+id/nutritionB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_today"
         android:text="@string/nutrition_button"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="429dp" />
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp" />
+    <TextView
+        android:text="@string/nutrition_button"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        />
 
 </LinearLayout>
