--- a/app/src/main/res/layout/activity_nutrition.xml
+++ b/app/src/main/res/layout/activity_nutrition.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".NutritionActivity">
 
     <TextView
@@ -11,4 +12,65 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/nutrition_text" />
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/waterText"
+        android:layout_width="291dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="How many glasses of water did you drink today?" />
+
+    <EditText
+        android:id="@+id/waterEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:inputType="number" />
+
+    <Button
+        android:id="@+id/waterButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enter water" />
+
+    <TextView
+        android:id="@+id/waterLeftText"
+        android:layout_width="291dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Glasses left to drink: 8" />
+
+    <TextView
+        android:id="@+id/calText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="How many calories did you take in?" />
+
+    <EditText
+        android:id="@+id/calEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:inputType="number" />
+
+    <Button
+        android:id="@+id/calButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enter calories" />
+
+    <TextView
+        android:id="@+id/calLeftText"
+        android:layout_width="291dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Max calories left: 2000" />
+
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+</TableLayout>
