--- a/app/src/main/res/layout/fitness_widget.xml
+++ b/app/src/main/res/layout/fitness_widget.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#62826f"
+    android:layout_margin="5dp"
+    card_view:cardCornerRadius="10dp">
+<LinearLayout
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:background="@color/fitnessBackGroundColour"
     android:layout_margin="1dp"
     android:padding="8dp"
     android:onClick="startFitnessActivity"
+
     >
 
 
@@ -16,25 +22,47 @@
         android:layout_gravity="center_vertical"
         android:layout_margin="5dp"
         android:visibility="visible"
-        tools:src="@drawable/fitness" />
+        android:src="@drawable/fitness"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Today's workout: [activity]"
+            android:text="@string/fitness_page_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
+            android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add something here. Maybe a progress bar for goals?"
+            android:text="@string/fitness_line1"
             />
-
+        <TextView
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fitness_line2"
+            />
+        <TextView
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fitness_line3"
+            />
+        <ImageView
+            android:id="@+id/fitness_info_button"
+            android:layout_margin="5dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="right"
+            android:src="@drawable/question"
+            android:onClick="showFitnessInfo"
+            />
     </LinearLayout>
 
 </LinearLayout>
+</androidx.cardview.widget.CardView>
