--- a/app/src/main/res/layout/profile_widget.xml
+++ b/app/src/main/res/layout/profile_widget.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#7888a1"
+    android:layout_margin="5dp"
+    card_view:cardBackgroundColor="@color/black"
+    card_view:cardCornerRadius="10dp">
+    <LinearLayout
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:background="@color/profileBackGroundColour"
     android:layout_margin="1dp"
     android:padding="8dp"
     android:onClick="startProfileActivity">
@@ -13,26 +19,48 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_gravity="center_vertical"
-        android:layout_margin="5dp"
-        tools:src="@tools:sample/avatars" />
+        android:layout_margin="10dp"
+        android:src="@drawable/profile" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello : [name]"
+            android:text="@string/profile_page_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
+            android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add something here. Maybe a progress bar for goals?"
+            android:text="@string/profile_line1"
             />
-
+        <TextView
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/profile_line2"
+            />
+        <TextView
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/profile_line3"
+            />
+        <ImageView
+            android:layout_margin="5dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="right"
+            android:src="@drawable/question"
+            android:onClick="showProfileInfo"
+            />
     </LinearLayout>
+    
 
 </LinearLayout>
+</androidx.cardview.widget.CardView>
