--- a/app/src/main/res/layout/signup_dialog.xml
+++ b/app/src/main/res/layout/signup_dialog.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/buttonborder"
+    >
 
     <TextView
         android:id="@+id/registerText"
@@ -9,6 +11,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/createUserButton"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:textSize="40sp" />
 
     <EditText
@@ -16,7 +20,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:padding="10dp"
+        android:background="@drawable/border"
+        android:textColorHint="@color/hintcolor"
         android:inputType="textPersonName"
+        android:layout_marginVertical="10dp"
+        android:textColor="@color/black"
+        android:layout_marginHorizontal="65dp"
         android:hint="@string/signup_name"
         android:layout_marginTop="20dp"/>
 
@@ -25,6 +35,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:padding="10dp"
+        android:background="@drawable/border"
+        android:textColorHint="@color/hintcolor"
+        android:layout_marginVertical="10dp"
+        android:textColor="@color/black"
+        android:layout_marginHorizontal="65dp"
         android:inputType="textPersonName"
         android:hint="@string/username" />
 
@@ -34,6 +50,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:padding="10dp"
+        android:background="@drawable/border"
+        android:textColorHint="@color/hintcolor"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="65dp"
+        android:textColor="@color/black"
         android:inputType="textPassword"
         android:hint="@string/password" />
 
@@ -42,8 +64,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        android:layout_marginBottom="20dp"
+        android:textColorHint="@color/hintcolor"
+        android:layout_marginHorizontal="65dp"
+        android:padding="10dp"
+        android:background="@drawable/border"
         android:inputType="textPassword"
-        android:hint="@string/dialogSU_confirmPass"
-        android:layout_marginBottom="20dp"/>
+        android:hint="@string/dialogSU_confirmPass" />
 
 </LinearLayout>
