--- a/app/src/main/res/layout/activity_fitness.xml
+++ b/app/src/main/res/layout/activity_fitness.xml
@@ -11,5 +11,5 @@
         android:id="@+id/fitnessText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/fitness_text" />
+        android:text="This is the fitness activity" />
 </LinearLayout>
